test update nav bar colour
test update nav bar colour

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -32,7 +32,7 @@
   --panel-background: var(--color-smoke-30);
   --panel-border-color: var(--color-smoke-90);
   /* navbar */
-  --navbar-background: var(--color-jet-80);
+  --navbar-background: #131736;
   --navbar-font-color: var(--color-white);
   --navbar_hover-background: var(--color-black);
   --navbar-button-background: var(--color-white);
