--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -16,9 +16,9 @@
   --color-jet-70: #222;
   --color-jet-80: #191919;
   --color-black: #000;
-  --color-chromatic-black: #0ac1b0
-  --color-cool-gray-1: #e9ebf9
-  --color-cool-gray-4: #494C67
+  --color-chromatic-black: #0ac1b0;
+  --color-cool-gray-1: #e9ebf9;
+  --color-cool-gray-4: #494C67;
 
   /* fonts */
   --rem-base: 14; /* used to compute rem value from desired pixel value (e.g., calc(18 / var(--rem-base) * 1rem) = 18px) */
