--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -16,11 +16,11 @@
   --color-jet-70: #222;
   --color-jet-80: #191919;
   --color-black: #000;
-  --color-chromatic-black: #0A0C1B;
+  --color-chromatic-black: #0a0c1b;
   --color-dark-blue: #131736;
   --color-cool-gray-4: #494c67;
-  --color-cool-gray-3: #B4B6C8;
-  --color-cool-gray-2: #B4B6C8;
+  --color-cool-gray-3: #b4b6c8;
+  --color-cool-gray-2: #b4b6c8;
   --color-cool-gray-1: #e9ebf9;
   /* fonts */
   --rem-base: 14; /* used to compute rem value from desired pixel value (e.g., calc(18 / var(--rem-base) * 1rem) = 18px) */
