--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,6 +1,10 @@
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
+         <div class="logo-image">
+            <img src="OpenNMS_Logo-Mark_Full-color1.svg" class="img-fluid">
+      </div>
+</a>
       <a class="navbar-item" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
