logo added to css

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -277,3 +277,11 @@ body {
   padding: 0 0.75em;
   white-space: nowrap;
 }
+
+.logo-image {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: -6px;
+}
