--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,7 +1,7 @@
 <header class="header">
   <nav class="navbar">
+     <img class="navbar-logo" src="{{{uiRootPath}}}/img/logo.svg"/>
     <div class="navbar-brand">
-      <img src="{{{uiRootPath}}}/img/logo.svg"/>
       <a class="navbar-item" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
