--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,6 +1,6 @@
 <header class="header">
   <nav class="navbar">
-     <img class="navbar-logo" src="{{{uiRootPath}}}/img/logo.svg"/>
+     <a href="{{{or site.url (or siteRootUrl siteRootPath)}}}"><img class="navbar-logo" src="{{{uiRootPath}}}/img/logo.svg"/></a> 
     <div class="navbar-brand">
       <a class="navbar-item" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">{{site.title}}</a>
       <button class="navbar-burger" data-target="topbar-nav">
