--- a/src/css/header.css
+++ b/src/css/header.css
@@ -25,7 +25,7 @@ body {
 .navbar-brand .navbar-item:first-child,
 .navbar-brand .navbar-item:first-child a {
   color: var(--navbar-font-color);
-  font-size: calc(22 / var(--rem-base) * 1rem);
+  font-size: 2rem;
 }
 
 .navbar-brand .separator {
@@ -123,7 +123,7 @@ body {
   color: var(--navbar-menu-font-color);
   display: block;
   line-height: var(--doc-line-height);
-  padding: 0.5rem 1rem;
+  padding: 2.5rem 1.6rem;
   position: relative;
 }
 
