reverted back to white from sky blue in the navbar text

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -42,7 +42,7 @@
   --panel-border-color: var(--color-smoke-90);
   /* navbar */
   --navbar-background: var(--color-dark-blue);
-  --navbar-font-color: var(--color-sky-blue);
+  --navbar-font-color: var(--color-white);
   --navbar_hover-background: var(--color-dark-blue);
   --navbar-button-background: var(--color-white);
   --navbar-button-border-color: var(--panel-border-color);
