--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -273,8 +273,9 @@ html.is-clipped--nav {
 .navbar-logo {
   padding-left: 1.3rem;
   padding-right: 0.5rem;
-  padding-top: 1.3rem;
-  height: 3.4rem;
+  margin-top: 1.3rem;
+  height: 2.1rem;
+  border-right: 0.2rem #14d1df solid;
 }
 
 /*
