--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -1,1 +1,3 @@
-    {{!-- Add additional meta tags here --}}
+<link rel="stylesheet" href="{{uiRootPath}}/css/search.css">
+<link rel="stylesheet" href="{{uiRootPath}}/css/admonition-labels.css">
+<link rel="icon" href="{{uiRootPath}}/img/favicon.svg">
